--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,26 +5,31 @@ body {
 
 header {
     background: #fff;
-    border-color: #ccc;
-    overflow: auto;
+    border-bottom: 4px solid #ccc;
+    height: 80px;
+    margin-bottom: 10px;
 }
 
 .container {
     width: 960px;
     margin: auto;
-    text-align: center;
     position: relative;
+    height: 80px;
 }
 
 h1 {
     background: #4aaaa5;
     color: #fff;
-    float: left;
-    padding: 20px;
+    position: absolute;
+    left: 0;
+    padding: 22px;
+    margin: 0;
 }
 
 nav {
-    float: right;
+    position: absolute;
+    right: -15px;
+    margin-top: 40px;
 }
 
 main {
@@ -39,12 +44,15 @@ main {
 
 h2 {
     color: #4aaaa5;
+    padding: 21.5px;
 }
 
 footer {
     text-align: center;
     border-top: 8px solid #4aaaa5;
     background: #666;
+    height: 50px;
+    margin-top: 10px;
 }
 
 .bio-pic {
@@ -53,4 +61,10 @@ footer {
 
 .header-font {
     font-family: 'Georgia', Times, 'Times New Roman', serif;
+}
+
+a {
+    text-decoration: none;
+    padding: 15px;
+
 }
