--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,14 @@
 body {
     background-image: url(../images/beige-tiles.png);
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    margin: 0px;
+    padding: 0px;
 }
 
 header {
     background: #fff;
     border-bottom: 4px solid #ccc;
     height: 80px;
-    margin-bottom: 10px;
 }
 
 .container {
@@ -29,12 +30,12 @@ h1 {
 nav {
     position: absolute;
     right: -15px;
-    margin-top: 40px;
+    margin-top: 35px;
 }
 
 main {
     display: block;
-    margin: auto;
+    margin: 20px auto 20px auto;
     background: #fff;
     border-color: #ddd;
     width: 960px;
@@ -44,19 +45,20 @@ main {
 
 h2 {
     color: #4aaaa5;
-    padding: 21.5px;
+    padding: 10px 22px;
 }
 
 footer {
     text-align: center;
     border-top: 8px solid #4aaaa5;
     background: #666;
-    height: 50px;
-    margin-top: 10px;
+    padding-top: 40px;
+    color: #fff;
 }
 
 .bio-pic {
     width: 300px;
+    float: left;
 }
 
 .header-font {
@@ -66,5 +68,4 @@ footer {
 a {
     text-decoration: none;
     padding: 15px;
-
 }
