--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,11 @@ body {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     margin: 0px;
     padding: 0px;
+    height: 100%;
+}
+
+html {
+    height: 100%;
 }
 
 header {
@@ -48,12 +53,24 @@ h2 {
     padding: 10px 22px;
 }
 
+.wrapper {
+    position: relative;
+    min-height: 100%;
+    margin-bottom: -66px;
+}
+
+.push {
+    height: 66px;
+    clear: both;
+}
+
 footer {
     text-align: center;
     border-top: 8px solid #4aaaa5;
     background: #666;
     padding-top: 40px;
     color: #fff;
+    position: relative;
 }
 
 .bio-pic {
